<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Earthquake</string>
    <string name="feed">http://earthquake.usgs.gov/earthquakes/catalogs/1day-M2.5.xml</string>
    
    <string name="menu_update">Refresh Earthquakes</string>
    <string name="menu_preferences">Preferences</string>
    
     <string name="auto_update_prompt">Auto Update</string>
     <string name="update_freq_prompt">Update Frequency</string>
     <string name="min_quake_mag_prompt">Minimum Quake Magnitude</string>
     <string name="pref_ok">Save</string>
     <string name="pref_cancel">Cancel</string>
     

</resources>