<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/auto_update_prompt"/>
    
    <CheckBox android:id="@+id/checkbox_auto_update"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_freq_prompt"/>
    
    <Spinner android:id="@+id/spinner_update_freq"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/min_quake_mag_prompt"/>
    
    <Spinner android:id="@+id/spinner_mag"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
    
    <LinearLayout android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        
        <Button android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pref_ok"/>
        
        <Button android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pref_cancel"/>
        
        
    </LinearLayout>
    
    
    

</LinearLayout>